--- a/S-tutka/src/assets/styles.css
+++ b/S-tutka/src/assets/styles.css
@@ -51,6 +51,11 @@
     display: flex;
     align-items: center;
   }
+  .imgToCenter{
+    align-items: center;
+    justify-content: center;
+    position: relative;
+  }
 
   @media screen and (max-width: 390px) {
     .v-list-item__title.cityNameText {
